# RRAEsTorch

./: .gitignore  README copy.md  README.md  general-MLP.py  main-CNN.py  main-CNN1D.py  main-CNN3D.py  main-MLP-Vanilla.py  main-MLP.py  main-adap-CNN.py  main-adap-MLP.py  main-var-CNN.py  main-var-CNN1D.py  pyproject.toml
.github/workflows/: python-app.yaml  python-app.yml
RRAEsTorch/: __init__.py  config.py
RRAEsTorch/AE_base/: AE_base.py  __init__.py
RRAEsTorch/AE_classes/: AE_classes.py  __init__.py
RRAEsTorch/tests/: test_AE_classes_CNN.py  test_AE_classes_MLP.py  test_fitting_CNN.py  test_fitting_MLP.py  test_mains.py  test_save.py  test_stable_SVD.py  test_wrappers.py
RRAEsTorch/trackers/: trackers.py
RRAEsTorch/training_classes/: __init__.py  training_classes.py
RRAEsTorch/utilities/: utilities.py
RRAEsTorch/wrappers/: __init__.py  wrappers.py
notebooks/: main-MLP-Vanilla.ipynb  main-MLP.ipynb
